[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/players/player_2d.tscn" type="PackedScene" id=1]
[ext_resource path="res://themes/main.tres" type="Theme" id=2]
[ext_resource path="res://scenes/world/BG1.png" type="Texture" id=3]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/world/world.gd" type="Script" id=5]
[ext_resource path="res://scenes/enemies/cat_1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/cat_2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemies/mon_1.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enemies/mon_2.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/enemies/mon_3.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enemies/boss.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 135 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )
cat_1 = ExtResource( 6 )
cat_2 = ExtResource( 7 )
mon_1 = ExtResource( 8 )
mon_2 = ExtResource( 9 )
mon_3 = ExtResource( 10 )
boss = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
margin_left = 2.0
margin_top = 2.0
margin_right = 22.0
margin_bottom = 15.0

[node name="Label" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_right = 12.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "HP"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 16.0
margin_right = 116.0
margin_bottom = 13.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 10.0
step = 1.0
value = 5.0
percent_visible = false

[node name="GameOver" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -37.0
margin_right = 110.0
margin_bottom = 37.0

[node name="Label" type="Label" parent="CanvasLayer/Control/GameOver"]
margin_right = 220.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 6 )
text = "GAME OVER"

[node name="Button" type="Button" parent="CanvasLayer/Control/GameOver"]
margin_left = 73.0
margin_top = 55.0
margin_right = 147.0
margin_bottom = 74.0
size_flags_horizontal = 4
text = "Title Screen"

[node name="Dialogue" type="PanelContainer" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -54.0
margin_right = 240.0
rect_min_size = Vector2( 480, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Dialogue"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 47.0

[node name="Image" type="TextureRect" parent="CanvasLayer/Control/Dialogue/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Dialogue/HBoxContainer"]
margin_left = 44.0
margin_right = 466.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="CanvasLayer/Control/Dialogue/HBoxContainer/VBoxContainer"]
margin_right = 422.0
margin_bottom = 13.0
text = "Name"

[node name="Speech" type="Label" parent="CanvasLayer/Control/Dialogue/HBoxContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 422.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Speech"

[node name="Timer" type="Timer" parent="CanvasLayer/Control/Dialogue/HBoxContainer/VBoxContainer/Speech"]
wait_time = 0.05
one_shot = true

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 240, -10 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 240, 280 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -10, 135 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 490, 135 )
shape = SubResource( 2 )

[node name="Player2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 135 )

[connection signal="pressed" from="CanvasLayer/Control/GameOver/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="CanvasLayer/Control/Dialogue/HBoxContainer/VBoxContainer/Speech/Timer" to="." method="_on_Timer_timeout"]
[connection signal="player_died" from="Player2D" to="." method="_on_Player2D_player_died"]
[connection signal="player_health_changed" from="Player2D" to="." method="_on_Player2D_player_health_changed"]
